# pyh5md

./: .gitignore  CONTRIBUTORS  LICENSE  MANIFEST.in  README.md  h5md_module.py  pyproject.toml  read.py  run.py  run_h5md.py  run_parallel.py  setup.py
.github/workflows/: python-package.yml
examples/: analyze_h5md.py  check_file.py  jump_process.py  jump_process_analysis.py  open_file.py  random_walk_1d.py  random_walk_1d_analysis.py  random_walk_open_2d.py  read.py  run.py  run_h5md.py  run_parallel.py  show_walk_2d.py
pyh5md/: __init__.py  base.py  box.py  core.py  h5md_module.py  module.py  topology.py  utils.py
tests/: test_create_file.py
